# AI-Rival-Tracker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
reports/: www.apple.com__20260415_0149.md
src/rival_tracker/: analyzer.py  reporter.py  scraper.py  storage.py
